# EnPu

./: .gitignore  README.md  ROADMAP.md
.github/workflows/: cd-windows.yml  ci.yml  release-windows.yml
core/: Dockerfile  README.md  enpu-core.spec  requirements-ci.txt  requirements-eval.txt  requirements.txt  run_server.py
core/app/: __init__.py  config.py  main.py
core/schemas/: enpu-score-v0.1.json
core/tests/: conftest.py  test_barlines.py  test_export.py  test_health.py  test_layout.py  test_parse.py  test_parse_score.py  test_preprocess.py  test_recognize.py  test_score_schema.py
deploy/: docker-compose.yml
desktop/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: README.md
desktop/src-tauri/resources/: README.md  install-paddle-ocr.ps1
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/windows/: hooks.nsh
docs/: api.md  architecture.md  eval-baseline.md  jianpu-schema.md  poc-acceptance.md  poc-sidecar.md  release-windows.md
samples/: README.md
samples/eval/: README.md  manifest.json
samples/scores/: example-minimal.json  example-minimal.mid  (+1 more)
scripts/: README.md  build-core-sidecar.ps1  build-core-sidecar.sh  build-release.ps1  desktop-watcher.ps1  dev-core.ps1  dev-desktop.ps1  eval-accuracy.py  generate-eval-samples.py  generate-samples.py  import-manual-scores.py  prepare-core-app-resources.ps1  prepare-sidecar.ps1  smoke-poc.ps1  start.ps1  start.sh  stop.ps1  stop.sh
(+45 files in other folders)
