[package]
name = "enpu-desktop"
version = "0.1.0"
description = "EnPu desktop shell — Chinese worship jianpu OMR"
authors = ["loootte"]
edition = "2021"

[lib]
name = "enpu_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
